--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,8 +1,9 @@
 <app-player
   *ngFor="let player of game.players; let i = index"
   class="player-position"
-  [ngStyle]="{ 'top.px': 100 + i * 120 }"
+  [ngStyle]="{ 'top.px': 100 + i * 90 }"
   [name]="player"
+  [playerActive]="i == game.currentPlayer"
 ></app-player>
 <div class="field">
   <div class="card-stack">
@@ -43,9 +44,13 @@
 </div>
 
 <button
+  class="btn-add"
   mat-fab
   color="primary"
   aria-label="Example icon button with a delete icon"
+  (click)="openDialog()"
 >
   <mat-icon>add</mat-icon>
 </button>
+
+<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
